[project]
name = "ai-agent"
version = "0.1.0"
description = "This is a project that explores building an AI agent with Google Gemini."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "google-genai==1.12.1",
    "ollama>=0.6.1",
    "openrouter>=0.9.1",
    "python-dotenv==1.1.0",
]
